data/derived/fa15/progs/unify/prog0358.ml.out
Characters 103-104:
  | Sine e	      -> sin(eval e x y)
                             ^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
